--- a/index.html
+++ b/index.html
@@ -6,38 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- CSS -->
+    <!-- Main CSS -->
     <link rel="stylesheet" href="archivos/css/main.css">
+    <!-- Cargador CSS -->
+    <link rel="stylesheet" href="archivos/css/cargador.css">
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Slick -->
+    <link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick.css">
+    <link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick-theme.css">
     <title>PetStore</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="#">
-              <img src="archivos/img/PetStoreLogo.png" width="100%" height="50" alt="">
+        <nav class="navbar navbar-light bg-light fixed-top">
+            <a class="navbar-brand m-auto" href="#">
+              <img src="archivos/img/PetStoreLogo.png" width="100%" height="50" alt="Logo de PetStore">
             </a>
         </nav>
     </header>
-    <button class="btn btn-info">X</button>
     <aside>
-        <h3>Menu1</h3>
+        <button class="btn fondoPurpura text-light absoluto btnSidebar" onclick="$(this).find('#iconoSidebar').toggleClass('fa-times fa-bars')"><i id="iconoSidebar" class="fas fa-times"></i></button>
+        <div class="text-center bg-light headerSidebar">
+            <img src="archivos/img/PetStoreLogo.png" width="90" height="45" alt="Logo de PetStore Sidebar">
+        </div>
+        <div class="bodySidebar bg-light">
+            <ul class="text-center">
+                <li id="inicio" onclick="activarItem($(this).attr('id')); cargarIframe($(this).attr('id'));" class="bordeActivo"><a id="enlaceinicio" class="textoActivo">Inicio</a></li>
+                <li id="nosotros" onclick="activarItem($(this).attr('id')); cargarIframe($(this).attr('id'));"><a id="enlacenosotros">Nosotros</a></li>
+                <li id="tienda" onclick="activarItem($(this).attr('id')); cargarIframe($(this).attr('id'));"><a id="enlacetienda">Tienda</a></li>
+                <li id="organizaciones" onclick="activarItem($(this).attr('id')); cargarIframe($(this).attr('id'));"><a id="enlaceorganizaciones">Organizaciones</a></li>
+                <li id="contacto" onclick="activarItem($(this).attr('id')); cargarIframe($(this).attr('id'));"><a id="enlacecontacto">Contacto</a></li>
+            </ul>
+        </div>
     </aside>
     <main>
         <article>
-            <section></section>
-            <section></section>
-            <section></section>
+            <section>
+                <div id="seccionDinamica" class="container pt-5">
+                    <div id="loader"></div>
+                </div>
+            </section>
         </article>
     </main>
-    <footer>
-
+    <footer class="fixed-bottom text-center bg-light p-3">
+        <h4>PetStore &copy; 2023</h4>
     </footer>
 </body>
 </html>
 
 <!-- Bootstrap JS -->
-<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- Main JS -->
 <script src="archivos/js/main.js"></script>
+<!-- Slicker -->
+<script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
