API Regiones - Comunas

--- a/contacto.html
+++ b/contacto.html
@@ -1,1 +1,73 @@
-<h1>Contacto</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Cargador CSS -->
+    <link rel="stylesheet" href="archivos/css/cargador.css">
+    <!-- Tienda CSS -->
+    <link rel="stylesheet" href="archivos/css/tienda.css">
+    <!-- Contacto CSS -->
+    <link rel="stylesheet" href="archivos/css/contacto.css">
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Slick -->
+    <link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick.css">
+    <link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick-theme.css">
+    <title>PetStore</title>
+</head>
+    <body>
+        <h3 class="text-center mt-5">Contáctanos</h3>
+        <div class="formulario p-3 mt-4 mb-5 fondoPurpura">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="form-group">
+                        <label for=""><b class="text-light">Nombres</b></label>
+                        <input id="nombre" type="text" name="nombre" class="form-control" placeholder="Nombres">
+                    </div>
+                    <div class="form-group">
+                        <label for=""><b class="text-light">Apellidos</b></label>
+                        <input id="apellido" type="text" name="apellido" class="form-control" placeholder="Apellidos">
+                    </div>
+                    <div class="form-group">
+                        <label for=""><b class="text-light">Email</b></label>
+                        <input id="email" class="form-control" placeholder="Email" type="email">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="form-group">
+                        <label for=""><b class="text-light">Teléfono</b></label>
+                        <input id="telefono" class="form-control" placeholder="Telefono" type="number">
+                    </div>
+                    <div class="form-group">
+                        <label for=""><b class="text-light">Región</b></label>
+                        <select class="form-control" id="region">
+                            <option value="">Seleccionar Región</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for=""><b class="text-light">Comuna</b></label>
+                        <select disabled class="form-control" id="comuna">
+                            <option value="">Seleccionar Comuna</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <button id="boton" class="btn btn-light btn-block">Envíar Formulario</button>
+        </div>
+    </body>
+</html>
+
+<!-- Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- Slicker -->
+<script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
+<!-- Sweet Alert -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!-- Tienda JS -->
+<script src="archivos/js/contacto.js"></script>
