Inicio y nosotros listo

--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,8 @@
     <title>PetStore</title>
 </head>
     <body>
-        <h3 class="text-center mt-5">Contáctanos</h3>
+        <div class="container">
+            <h3 class="text-center mt-5">Contáctanos</h3>
         <div class="formulario p-3 mt-4 mb-5 fondoPurpura">
             <div class="row">
                 <div class="col-lg-6">
@@ -57,6 +58,7 @@
                 </div>
             </div>
             <button id="boton" class="btn btn-light btn-block">Envíar Formulario</button>
+        </div>
         </div>
     </body>
 </html>
