--- a/nosotros.html
+++ b/nosotros.html
@@ -1,1 +1,60 @@
-<h1>Nosotros</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Cargador CSS -->
+    <link rel="stylesheet" href="archivos/css/cargador.css">
+    <!-- Tienda CSS -->
+    <link rel="stylesheet" href="archivos/css/tienda.css">
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Slick -->
+    <link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick.css">
+    <link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick-theme.css">
+    <title>PetStore</title>
+</head>
+<body>
+    <div class="container">
+        <div class="sobrenosotros mb-5">
+            <h2 class="text-center mt-5 mb-3">Sobre Nosotros</h2>
+            <hr>
+            <div class="row mt-5">
+                <div class="col-lg-6 mb-3">
+                    <img class="w-100" src="archivos/img/sobre.jpg" alt="">
+                </div>
+                <div class="col-lg-6">
+                    <p>
+                        Somos un equipo joven apasionado por los animales y comprometido con su bienestar. 
+                        Nos dedicamos a la venta de artículos para animales, ofreciendo una amplia gama de 
+                        productos de alta calidad para consentir a tus queridas mascotas.
+                    </p>
+                    <p>
+                        Pero no solo nos preocupamos por ofrecer los mejores productos, 
+                        también creemos en hacer una diferencia en la comunidad.
+                         Por eso, destinamos una parte de nuestras ganancias a realizar
+                        donaciones a organizaciones benéficas que se dedican a ayudar a 
+                        animales en situación de vulnerabilidad.
+                    </p>
+                    <p>
+                        Nuestro objetivo es brindar un servicio excepcional a nuestros clientes, 
+                        ofreciendo productos que cumplan con los más altos estándares de calidad 
+                        y contribuyendo a causas que marcan la diferencia en la vida de los animales 
+                        necesitados.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
+
+<!-- Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- Slicker -->
+<script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
