--- a/organizaciones.html
+++ b/organizaciones.html
@@ -19,7 +19,7 @@
 </head>
 <body> 
     <section id="donacion">
-        <h2 class="text-center mt-5 mb-3">Organizaciones</h2>
+        <h2 class="text-center mt-5 mb-3">Donaciones</h2>
         <div class="row">
             <div class="col-lg-6 text-center">
                 <h4>Fundacion animal chile</h4>
