--- a/inicio.html
+++ b/inicio.html
@@ -18,36 +18,38 @@
     <title>PetStore</title>
 </head>
 <body>
+  <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active altoCarrusel">
-            <img class="d-block w-100" src="archivos/img/nosotros.jpg" alt="First slide">
-          </div>
-          <div class="carousel-item altoCarrusel">
-            <img class="d-block w-100" src="archivos/img/mascotas.jpg" alt="Second slide">
-          </div>
-          <div class="carousel-item altoCarrusel">
-            <img class="d-block w-100" src="archivos/img/gatoperro.jpg" alt="Third slide">
-          </div>
-          <div class="carousel-item altoCarrusel">
-            <img class="d-block w-100" src="archivos/img/caridad-mascotas.jpg" alt="Third slide">
-          </div>
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active altoCarrusel">
+          <img class="d-block w-100" src="archivos/img/nosotrosImg.png" alt="Fasdasdsadas">
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item altoCarrusel">
+          <img class="d-block w-100" src="archivos/img/tiendaImg.png" alt="Second slide">
+        </div>
+        <div class="carousel-item altoCarrusel">
+          <img class="d-block w-100" src="archivos/img/donacionesImg.png" alt="Third slide">
+        </div>
+        <div class="carousel-item altoCarrusel">
+          <img class="d-block w-100" src="archivos/img/contactoImg.png" alt="Third slide">
+        </div>
       </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 </body>
 </html>
 
@@ -59,3 +61,4 @@
 <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
 <!-- Tienda JS -->
 <script src="archivos/js/tienda.js"></script>
+<!-- <script src="archivos/js/main.js"></script> -->
